--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "geolib": "^3.3.1",
     "pg": "^8.2.1",
     "postgres": "^1.0.2"
   }
